--- a/swagger-spec/registrations/contributor_detail.yaml
+++ b/swagger-spec/registrations/contributor_detail.yaml
@@ -2,17 +2,8 @@
 get:
   summary: Retrieve a contributor
   description: >-
-    Retrieves the details of a contributor for a registration.
+    Retrieves the details of a contributor on this registration.
 
-
-    Contributors are users who can make changes to the node or, in the case of private nodes, have read access to the node.
-
-
-    Contributors are categorized as either "bibliographic" or "non-bibliographic".
-    From a permissions standpoint, both are the same, but bibliographic contributors are included in citations and are listed on the project overview page on the OSF, while non-bibliographic contributors are not.
-
-
-    Contributors can be viewed, removed, and have their permissions and bibliographic status changed via this endpoint.
 
     #### Returns
 
