--- a/swagger-spec/registrations/contributors_list.yaml
+++ b/swagger-spec/registrations/contributors_list.yaml
@@ -2,7 +2,9 @@
 get:
   summary: List all contributors
   description: >-
-    A paginated list of the registration's contributors, sorted by their index.
+    A paginated list of all contributors on this registration.
+
+    The returned contributors are sorted by their index.
 
 
     Contributors are users who can make changes to the node or, in the case of private nodes, have read access to the node.
@@ -21,7 +23,7 @@ get:
 
 
     The `data` key contains an array of up to 10 contributors.
-    Each resource in the array contains the full representation of the contributor, meaning additional requests to a contributor's detail view are not necessary.
+    Each resource in the array contains the full representation of the contributor.
     Additionally, the full representation of the user this contributor represents is automatically embedded within the `data` key of the response.
 
 
@@ -165,20 +167,14 @@ get:
             prev:
             next:
             meta:
-            total: 2
-            per_page: 10
+              total: 2
+              per_page: 10
 
 post:
   summary: Create a contributor
   description: >-
-    Adds a contributor to a node, effectively creating a relationship between the node and a user.
+    Adds a contributor to the node, effectively creating a relationship between the registration and a user.
 
-
-    Contributors are users who can make changes to the node or, in the case of private nodes, have read access to the node.
-
-
-    Contributors are categorized as either "bibliographic" or "non-bibliographic" contributors.
-    From a permissions standpoint, both are the same, but bibliographic contributors are included in citations and are listed on the project overview page on the OSF, while non-bibliographic contributors are not.
 
     #### Permissions
 
@@ -189,7 +185,7 @@ post:
     A relationship object with a `data` key, containing the `users` type and valid user ID is required.
 
 
-    All attributes describing the relationship between the node and the user are optional.
+    All attributes describing the relationship between the registration and the user are optional.
 
     #### Returns
 
