--- a/swagger-spec/registrations/forks_list.yaml
+++ b/swagger-spec/registrations/forks_list.yaml
@@ -1,23 +1,24 @@
 # /registrations/{node_id}/forks
 get:
-  summary: List all forks of this registration
+  summary: List all forks
   description: >-
 
-    A paginated list of the current node's forks.
+    A paginated list of nodes that are forks of this registration.
+
+
     The returned fork nodes are sorted by their `forked_date`, with the most recently forked nodes appearing first.
 
 
     Forking a project creates a copy of an existing node and all of its contents.
-    The fork always points back to the original node, forming a network of nodes.
 
     #### Returns
 
     Returns a JSON object containing `data` and `links` keys.
 
 
-    The `data` key contains an array of up to 10 forked nodes.
-    If the current node has zero forked nodes, the `data` key will contain an empty array.
-    Each resource in the array is a separate node object and contains the full representation of the forked node.
+    The `data` key contains an array of up to 10 forks.
+    If the current node has no fork, the `data` key will contain an empty array.
+    Each resource in the array is a separate node object and contains the full representation of the fork.
 
 
     The `links` key contains a dictionary of links that can be used for [pagination](#Introduction_pagination).
@@ -181,9 +182,9 @@ get:
               per_page: 10
 
 post:
-  summary: Create a fork of this node
+  summary: Create a fork
   description: >-
-    Creates a fork of the given node.
+    Creates a fork of the given registration.
 
 
     Forking a project creates a copy of an existing node and all of its contents.
