--- a/swagger-spec/registrations/linked_nodes_list.yaml
+++ b/swagger-spec/registrations/linked_nodes_list.yaml
@@ -1,8 +1,8 @@
 # /registrations/{node_id}/linked_nodes/
 get:
-  summary: List all linked nodes for a registration
+  summary: List all linked nodes
   description: >-
-    List of all nodes linked to the given node.
+    List of all nodes linked to the given registration.
 
     ####Returns
 
@@ -299,5 +299,5 @@ get:
             prev:
             next:
             meta:
-            total: 2
-            per_page: 10
+              total: 2
+              per_page: 10
