--- a/swagger-spec/registrations/style_detail.yaml
+++ b/swagger-spec/registrations/style_detail.yaml
@@ -2,12 +2,12 @@
 get:
   summary: Retrieve a citation
   description: >-
-    Retrieves the citation details for a registration, in CSL format.
+    Retrieves the citation style details for a registration, in CSL format.
 
     #### Returns
 
     Returns a JSON object with a `data` key that contains the representation of the details
-    necessary for the registration citation.
+    necessary for the citation style.
 
   parameters:
     - in: path
