--- a/swagger-spec/registrations/children_list.yaml
+++ b/swagger-spec/registrations/children_list.yaml
@@ -1,25 +1,25 @@
-# /registrations/{node_id}/children/
+# /registrations/{registration_id}/children/
 get:
-  summary: List all child nodes
+  summary: List all child registrations
   description: >-
 
     A paginated list of children of a registration.
 
 
-    The list consists of the next level child nodes for the given node.
-    The returned nodes are sorted by their `date_modified`, with the most recently updated child nodes appearing first.
+    The list consists of the next level child registrations for the given registration.
+    The returned registrations are sorted by their `date_modified`, with the most recently updated child registrations appearing first.
 
 
-    The list will include child nodes that are public, as well as child nodes that are private, if the authenticated user has permission to view them.
+    The list will include child registrations that are public, as well as child registrations that are private, if the authenticated user has permission to view them.
 
     #### Returns
 
     Returns a JSON object containing `data` and `links` keys.
 
 
-    The `data` key contains an array of up to 10 child nodes.
-    If the given node has zero child nodes, the `data` key will contain an empty array.
-    Each resource in the array is a separate node object and contains the full representation of the child node, meaning additional requests to the child node's detail view are not necessary.
+    The `data` key contains an array of up to 10 child registrations.
+    If the given registration has zero child registrations, the `data` key will contain an empty array.
+    Each resource in the array is a separate registration object and contains the full representation of the child registration.
 
 
     The `links` key contains a dictionary of links that can be used for [pagination](#Introduction_pagination).
@@ -29,33 +29,33 @@ get:
 
     #### Filtering
 
-    You can optionally request that the response only include nodes that match your filters by utilizing the `filter` query parameter, e.g.
+    You can optionally request that the response only include registrations that match your filters by utilizing the `filter` query parameter, e.g.
     https://api.osf.io/v2/registrations/wucr8/children/?filter[title]=reproducibility.
 
 
-    Nodes may be filtered by their `id`, `title`, `category`, `description`, `public`, `tags`, `date_created`, `date_modified`, `root`, `parent`, `preprint`, and `contributors`.
+    Registrations may be filtered by their `id`, `title`, `category`, `description`, `public`, `tags`, `date_created`, `date_modified`, `root`, `parent`, and `contributors`.
 
 
     Most fields are string fields and will be filtered using simple substring matching.
-    Public and preprint are boolean fields, and can be filtered using truthy values, such as **true**, **false**, **0** or **1**.
+    Public is a boolean field, and can be filtered using truthy values, such as **true**, **false**, **0** or **1**.
     Note that quoting true or false in the query will cause the match to fail.
   parameters:
     - in: path
       type: string
-      name: node_id
+      name: registration_id
       required: true
-      description: 'The unique identifier of the node.'
+      description: 'The unique identifier of the registration.'
   tags:
     - Registrations
   operationId: registrations_children_list
-  x-response-schema: Node
+  x-response-schema: Registration
   responses:
     '200':
       description: 'OK'
       schema:
         type: array
         items:
-          $ref: '../nodes/definition.yaml'
+          $ref: 'definition.yaml'
       examples:
         application/json:
           data:
@@ -63,141 +63,145 @@ get:
               files:
                 links:
                   related:
-                    href: https://api.osf.io/v2/nodes/ezum7/files/
+                    href: https://api.osf.io/v2/registrations/4cmnz/files/
                     meta: {}
               view_only_links:
                 links:
                   related:
-                    href: https://api.osf.io/v2/nodes/ezum7/view_only_links/
+                    href: https://api.osf.io/v2/registrations/4cmnz/view_only_links/
                     meta: {}
               citation:
                 links:
                   related:
-                    href: https://api.osf.io/v2/nodes/ezum7/citation/
+                    href: https://api.osf.io/v2/registrations/4cmnz/citation/
+                    meta: {}
+              registration_schema:
+                links:
+                  related:
+                    href: https://api.osf.io/v2/metaschemas/564d31db8c5e4a7c9694b2c0/
                     meta: {}
               parent:
                 links:
                   related:
-                    href: https://api.osf.io/v2/nodes/ezcuj/
+                    href: https://api.osf.io/v2/registrations/wucr8/
                     meta: {}
               contributors:
                 links:
                   related:
-                    href: https://api.osf.io/v2/nodes/ezum7/contributors/
+                    href: https://api.osf.io/v2/registrations/4cmnz/contributors/
                     meta: {}
               forks:
                 links:
                   related:
-                    href: https://api.osf.io/v2/nodes/ezum7/forks/
+                    href: https://api.osf.io/v2/registrations/4cmnz/forks/
                     meta: {}
               root:
                 links:
                   related:
-                    href: https://api.osf.io/v2/nodes/ezcuj/
+                    href: https://api.osf.io/v2/registrations/wucr8/
                     meta: {}
               identifiers:
                 links:
                   related:
-                    href: https://api.osf.io/v2/nodes/ezum7/identifiers/
+                    href: https://api.osf.io/v2/registrations/4cmnz/identifiers/
                     meta: {}
               comments:
                 links:
                   related:
-                    href: https://api.osf.io/v2/nodes/ezum7/comments/?filter%5Btarget%5D=ezum7
+                    href: https://api.osf.io/v2/registrations/4cmnz/comments/?filter%5Btarget%5D=4cmnz
                     meta: {}
-              registrations:
+              registered_from:
                 links:
                   related:
-                    href: https://api.osf.io/v2/nodes/ezum7/registrations/
+                    href: https://api.osf.io/v2/nodes/5wprs/
                     meta: {}
-              logs:
+              registered_by:
                 links:
                   related:
-                    href: https://api.osf.io/v2/nodes/ezum7/logs/
-                    meta: {}
-              node_links:
-                links:
-                  related:
-                    href: https://api.osf.io/v2/nodes/ezum7/node_links/
+                    href: https://api.osf.io/v2/users/7xea5/
                     meta: {}
               linked_nodes:
                 links:
                   self:
-                    href: https://api.osf.io/v2/nodes/ezum7/relationships/linked_nodes/
+                    href: https://api.osf.io/v2/registrations/4cmnz/relationships/linked_nodes/
                     meta: {}
                   related:
-                    href: https://api.osf.io/v2/nodes/ezum7/linked_nodes/
+                    href: https://api.osf.io/v2/registrations/4cmnz/linked_nodes/
                     meta: {}
               wikis:
                 links:
                   related:
-                    href: https://api.osf.io/v2/nodes/ezum7/wikis/
+                    href: https://api.osf.io/v2/registrations/4cmnz/wikis/
                     meta: {}
               affiliated_institutions:
                 links:
-                  self:
-                    href: https://api.osf.io/v2/nodes/ezum7/relationships/institutions/
-                    meta: {}
                   related:
-                    href: https://api.osf.io/v2/nodes/ezum7/institutions/
+                    href: https://api.osf.io/v2/registrations/4cmnz/institutions/
                     meta: {}
               children:
                 links:
                   related:
-                    href: https://api.osf.io/v2/nodes/ezum7/children/
+                    href: https://api.osf.io/v2/registrations/4cmnz/children/
                     meta: {}
-              preprints:
+              logs:
                 links:
                   related:
-                    href: https://api.osf.io/v2/nodes/ezum7/preprints/
-                    meta: {}
-              draft_registrations:
-                links:
-                  related:
-                    href: https://api.osf.io/v2/nodes/ezum7/draft_registrations/
+                    href: https://api.osf.io/v2/registrations/4cmnz/logs/
                     meta: {}
             links:
-              self: https://api.osf.io/v2/nodes/ezum7/
-              html: https://osf.io/ezum7/
+              self: https://api.osf.io/v2/registrations/4cmnz/
+              html: https://osf.io/4cmnz/
             attributes:
-              category: communication
-              fork: false
-              preprint: true
-              description: Reproducibility is a defining feature of science, but the extent
-                to which it characterizes current research is unknown. We conducted replications
-                of 100 experimental and correlational studies published in three psychology
-                journals using high-powered designs and original materials when available. Replication
-                effects were half the magnitude of original effects, representing a substantial
-                decline. Ninety-seven percent of original studies had statistically significant
-                results. Thirty-six percent of replications had statistically significant results;
-                47% of original effect sizes were in the 95% confidence interval of the replication
-                effect size; 39% of effects were subjectively rated to have replicated the original
-                result; and if no bias in original results is assumed, combining original and
-                replication results left 68% with statistically significant effects. Correlational
-                tests suggest that replication success was better predicted by the strength
-                of original evidence than by characteristics of the original and replication
-                teams.
+              registration_supplement: OSF-Standard Pre-Data Collection Registration
+              pending_embargo_approval: false
+              registration: true
+              embargo_end_date:
+              withdrawn: false
+              withdrawal_justification:
+              category: project
+              preprint: false
               current_user_permissions:
               - read
-              date_modified: '2016-11-02T21:25:12.572000'
-              title: Estimating the Reproducibility of Psychological Science
-              collection: false
-              registration: false
-              date_created: '2015-07-20T17:42:16.496000'
-              current_user_can_comment: false
-              node_license:
+              title: Full Project Description
+              registered_meta:
+                looked:
+                  comments: []
+                  value: 'No'
+                  extra: []
+                datacompletion:
+                  comments: []
+                  value: Yes, data collection is underway or complete
+                  extra: []
+                comments:
+                  comments: []
+                  value: Data collection for measurement time T1 is underway, but no data has
+                    been collected for T2 (when menstrual cycle information will be assessed).
+                    Therefore, data cannot be analysed at the time of preregistration.
+                  extra: []
               public: true
-              tags:
-              - replication
-              - reproducibility
-              - effect size
-            type: nodes
-            id: ezum7
+              fork: false
+              description: ''
+              tags: []
+              collection: false
+              current_user_can_comment: false
+              pending_registration_approval: false
+              date_modified: '2016-05-23T14:22:03.885000'
+              date_registered: '2016-05-23T14:24:25.478000'
+              node_links:
+                links:
+                  related:
+                    href: https://api.osf.io/v2/registrations/4cmnz/node_links/
+                    meta: {}
+              date_created: '2016-05-23T12:11:14.853000'
+              pending_withdrawal: false
+              node_license:
+            type: registrations
+            id: 4cmnz
           links:
             first:
-            last: https://api.osf.io/v2/nodes/ezcuj/children/?page=5
+            last:
             prev:
-            next: https://api.osf.io/v2/nodes/ezcuj/children/?page=2
+            next:
             meta:
-              total: 49
+              total: 1
               per_page: 10
