--- a/swagger-spec/registrations/comments_list.yaml
+++ b/swagger-spec/registrations/comments_list.yaml
@@ -1,9 +1,9 @@
-# /registrations/{node_id}/comments/
+# /registrations/{registration_id}/comments/
 get:
   summary: List all comments
   description: >-
 
-    A paginated list of comments of a node's registration.
+    A paginated list of the registration's comments.
 
 
     The returned comments are sorted by their creation date, with the most recent
@@ -20,7 +20,7 @@ get:
     If the comment-level is `public`, any logged-in OSF user can comment.
 
 
-    Comments of private registrations are only visible to contributors and administrators on the parent node.
+    Comments of private registrations are only visible to contributors and administrators on the registration.
 
     ####Returns
 
@@ -36,22 +36,22 @@ get:
     #### Filtering
 
     You can optionally request that the response only include comments that match your filters by utilizing the `filter` query parameter, e.g.
-    https://api.osf.io/v2/registrations/ezcuj/comments/?filter[target_id]=jg7sezmdnt93
+    https://api.osf.io/v2/registrations/wuerf/comments/?filter[target]=wuerf
 
 
-    Comments may be filtered by their `deleted`, `target_id`, `date_created`, `date_modified`.
+    Comments may be filtered by their `deleted`, `target`, `date_created`, `date_modified`.
 
 
     Most fields are string fields and will be filtered using simple substring matching.
-    Public and preprint are boolean fields, and can be filtered using truthy values, such as **true**, **false**, **0** or **1**.
+    Deleted is a boolean field, and can be filtered using truthy values, such as **true**, **false**, **0** or **1**.
     Note that quoting `true` or `false` in the query will cause the match to fail.
 
   parameters:
     - in: path
       type: string
-      name: node_id
+      name: registration_id
       required: true
-      description: 'The unique identifier of the node.'
+      description: 'The unique identifier of the registration.'
 
   tags:
     - Registrations
