--- a/swagger-spec/registrations/files_list.yaml
+++ b/swagger-spec/registrations/files_list.yaml
@@ -1,4 +1,4 @@
-# /registrations/{node_id}/files/{provider}/
+# /registrations/{registration_id}/files/{provider}/
 
 get:
   summary: List all files
@@ -33,10 +33,10 @@ get:
   parameters:
 
     - in: path
-      name: node_id
+      name: registration_id
       type: string
       required: true
-      description: 'The unique identifier of the node.'
+      description: 'The unique identifier of the registration.'
 
     - in: path
       name: provider
