--- a/swagger-spec/registrations/forks_list.yaml
+++ b/swagger-spec/registrations/forks_list.yaml
@@ -1,15 +1,15 @@
-# /registrations/{node_id}/forks
+# /registrations/{registration_id}/forks
 get:
   summary: List all forks
   description: >-
 
-    A paginated list of nodes that are forks of this registration.
+    A paginated list of the registration’s forks
 
 
-    The returned fork nodes are sorted by their `forked_date`, with the most recently forked nodes appearing first.
+    The returned forks are sorted by their `forked_date`, with the most recently forked registrations appearing first.
 
 
-    Forking a project creates a copy of an existing node and all of its contents.
+    Forking a registration creates a copy of an existing registration and all of its contents.
 
     #### Returns
 
@@ -17,8 +17,8 @@ get:
 
 
     The `data` key contains an array of up to 10 forks.
-    If the current node has no fork, the `data` key will contain an empty array.
-    Each resource in the array is a separate node object and contains the full representation of the fork.
+    If the current registration has no fork, the `data` key will contain an empty array.
+    Each resource in the array is a separate registration object and contains the full representation of the registration's fork.
 
 
     The `links` key contains a dictionary of links that can be used for [pagination](#Introduction_pagination).
@@ -26,20 +26,20 @@ get:
   parameters:
     - in: path
       type: string
-      name: node_id
+      name: registration_id
       required: true
-      description: 'The unique identifier of the node.'
+      description: 'The unique identifier of the registration.'
   tags:
     - Registrations
   operationId: registrations_forks_list
-  x-response-schema: Node
+  x-response-schema: Registration
   responses:
     '200':
       description: 'OK'
       schema:
         type: array
         items:
-          $ref: '../nodes/definition.yaml'
+          $ref: 'definition.yaml'
       examples:
         application/json:
           data:
@@ -47,138 +47,147 @@ get:
               files:
                 links:
                   related:
-                    href: https://api.osf.io/v2/nodes/95q3e/files/
+                    href: https://api.osf.io/v2/registrations/4cmnz/files/
                     meta: {}
               view_only_links:
                 links:
                   related:
-                    href: https://api.osf.io/v2/nodes/95q3e/view_only_links/
+                    href: https://api.osf.io/v2/registrations/4cmnz/view_only_links/
                     meta: {}
               citation:
                 links:
                   related:
-                    href: https://api.osf.io/v2/nodes/95q3e/citation/
+                    href: https://api.osf.io/v2/registrations/4cmnz/citation/
                     meta: {}
-              draft_registrations:
+              registration_schema:
                 links:
                   related:
-                    href: https://api.osf.io/v2/nodes/95q3e/draft_registrations/
+                    href: https://api.osf.io/v2/metaschemas/564d31db8c5e4a7c9694b2c0/
+                    meta: {}
+              parent:
+                links:
+                  related:
+                    href: https://api.osf.io/v2/registrations/wucr8/
                     meta: {}
               contributors:
                 links:
                   related:
-                    href: https://api.osf.io/v2/nodes/95q3e/contributors/
+                    href: https://api.osf.io/v2/registrations/4cmnz/contributors/
                     meta: {}
               forks:
                 links:
                   related:
-                    href: https://api.osf.io/v2/nodes/95q3e/forks/
+                    href: https://api.osf.io/v2/registrations/4cmnz/forks/
                     meta: {}
               root:
                 links:
                   related:
-                    href: https://api.osf.io/v2/nodes/95q3e/
+                    href: https://api.osf.io/v2/registrations/wucr8/
                     meta: {}
               identifiers:
                 links:
                   related:
-                    href: https://api.osf.io/v2/nodes/95q3e/identifiers/
-                    meta: {}
-              forked_from:
-                links:
-                  related:
-                    href: https://api.osf.io/v2/nodes/ezcuj/
+                    href: https://api.osf.io/v2/registrations/4cmnz/identifiers/
                     meta: {}
               comments:
                 links:
                   related:
-                    href: https://api.osf.io/v2/nodes/95q3e/comments/?filter%5Btarget%5D=95q3e
+                    href: https://api.osf.io/v2/registrations/4cmnz/comments/?filter%5Btarget%5D=4cmnz
                     meta: {}
-              registrations:
+              registered_from:
                 links:
                   related:
-                    href: https://api.osf.io/v2/nodes/95q3e/registrations/
+                    href: https://api.osf.io/v2/nodes/5wprs/
                     meta: {}
-              node_links:
+              registered_by:
                 links:
                   related:
-                    href: https://api.osf.io/v2/nodes/95q3e/node_links/
+                    href: https://api.osf.io/v2/users/7xea5/
                     meta: {}
               linked_nodes:
                 links:
                   self:
-                    href: https://api.osf.io/v2/nodes/95q3e/relationships/linked_nodes/
+                    href: https://api.osf.io/v2/registrations/4cmnz/relationships/linked_nodes/
                     meta: {}
                   related:
-                    href: https://api.osf.io/v2/nodes/95q3e/linked_nodes/
+                    href: https://api.osf.io/v2/registrations/4cmnz/linked_nodes/
                     meta: {}
               wikis:
                 links:
                   related:
-                    href: https://api.osf.io/v2/nodes/95q3e/wikis/
+                    href: https://api.osf.io/v2/registrations/4cmnz/wikis/
                     meta: {}
               affiliated_institutions:
                 links:
-                  self:
-                    href: https://api.osf.io/v2/nodes/95q3e/relationships/institutions/
-                    meta: {}
                   related:
-                    href: https://api.osf.io/v2/nodes/95q3e/institutions/
+                    href: https://api.osf.io/v2/registrations/4cmnz/institutions/
                     meta: {}
               children:
                 links:
                   related:
-                    href: https://api.osf.io/v2/nodes/95q3e/children/
-                    meta: {}
-              preprints:
-                links:
-                  related:
-                    href: https://api.osf.io/v2/nodes/95q3e/preprints/
+                    href: https://api.osf.io/v2/registrations/4cmnz/children/
                     meta: {}
               logs:
                 links:
                   related:
-                    href: https://api.osf.io/v2/nodes/95q3e/logs/
+                    href: https://api.osf.io/v2/registrations/4cmnz/logs/
                     meta: {}
             links:
-              self: https://api.osf.io/v2/nodes/95q3e/
-              html: https://osf.io/95q3e/
+              self: https://api.osf.io/v2/registrations/4cmnz/
+              html: https://osf.io/4cmnz/
             attributes:
+              registration_supplement: OSF-Standard Pre-Data Collection Registration
+              pending_embargo_approval: false
+              registration: true
+              embargo_end_date:
+              withdrawn: false
+              withdrawal_justification:
               category: project
-              fork: true
               preprint: false
-              description: ''
               current_user_permissions:
               - read
-              - write
-              - admin
-              date_modified: '2016-07-23T00:21:05.371000'
-              title: 'Fork of Reproducibility Project: Psychology'
-              forked_date: '2016-11-08T15:59:03.114000'
+              title: Full Project Description
+              registered_meta:
+                looked:
+                  comments: []
+                  value: 'No'
+                  extra: []
+                datacompletion:
+                  comments: []
+                  value: Yes, data collection is underway or complete
+                  extra: []
+                comments:
+                  comments: []
+                  value: Data collection for measurement time T1 is underway, but no data has
+                    been collected for T2 (when menstrual cycle information will be assessed).
+                    Therefore, data cannot be analysed at the time of preregistration.
+                  extra: []
+              public: true
+              fork: false
+              description: ''
+              tags: []
               collection: false
-              registration: false
-              date_created: '2012-04-01T15:49:07.702000'
-              current_user_can_comment: true
+              current_user_can_comment: false
+              pending_registration_approval: false
+              date_modified: '2016-05-23T14:22:03.885000'
+              date_registered: '2016-05-23T14:24:25.478000'
+              node_links:
+                links:
+                  related:
+                    href: https://api.osf.io/v2/registrations/4cmnz/node_links/
+                    meta: {}
+              date_created: '2016-05-23T12:11:14.853000'
+              pending_withdrawal: false
               node_license:
-              public: false
-              tags:
-              - replication
-              - reproducibility
-              - open science
-              - reproduction
-              - psychological science
-              - psychology
-              - metascience
-              - crowdsource
-            type: nodes
-            id: 95q3e
+            type: registrations
+            id: 4cmnz
           links:
             first:
             last:
             prev:
             next:
             meta:
-              total: 2
+              total: 1
               per_page: 10
 
 post:
@@ -187,8 +196,8 @@ post:
     Creates a fork of the given registration.
 
 
-    Forking a project creates a copy of an existing node and all of its contents.
-    The fork always points back to the original node, forming a network of nodes.
+    Forking a project creates a copy of an existing registration and all of its contents.
+    The fork always points back to the original registration, forming a network of registrations.
 
 
     You might use a fork to copy another's work to build on and extend.
@@ -196,19 +205,19 @@ post:
     Each student forks the project to have his or her own copy of the materials to start his/her own work.
 
 
-    When creating a fork, your fork will only contain public components of the current node and components for which you are a contributor.
+    When creating a fork, your fork will only contain public components of the current registration and components for which you are a contributor.
     Private components that you do not have access to will not be forked.
 
     #### Required
 
-    There are no required attributes when creating a fork, as all of the forked node's attributes will be copied from the current node.
+    There are no required attributes when creating a fork, as all of the forked registration's attributes will be copied from the current registration.
 
 
-    The `title` field is optional, with the default title being "Fork of " prepended to the current node's title.
+    The `title` field is optional, with the default title being "Fork of " prepended to the current registration's title.
 
     #### Returns
 
-    Returns a JSON object with a `data` key containing the complete srepresentation of the forked node, if the request is successful.
+    Returns a JSON object with a `data` key containing the complete representation of the forked registration, if the request is successful.
 
     If the request is unsuccessful, an `errors` key containing information about the failure will be returned.
     Refer to the [list of error codes](#Introduction_error_codes) to understand why this request may have failed.
@@ -216,21 +225,21 @@ post:
   parameters:
     - in: path
       type: string
-      name: node_id
+      name: registration_id
       required: true
-      description: 'The unique identifier of the node.'
+      description: 'The unique identifier of the registration.'
     - in: body
       name: body
       required: true
       # TODO: body example specific to forks -- i.e. nothing required
       schema:
-        $ref: '../nodes/definition.yaml'
+        $ref: 'definition.yaml'
   tags:
     - Registrations
   operationId: registrations_forks_create
   consumes:
     - application/json
-  x-response-schema: Node
+  x-response-schema: Registration
   responses:
     '201':
       description: 'Created'
