--- a/swagger-spec/registrations/linked_nodes_list.yaml
+++ b/swagger-spec/registrations/linked_nodes_list.yaml
@@ -1,8 +1,8 @@
-# /registrations/{node_id}/linked_nodes/
+# /registrations/{registration_id}/linked_nodes/
 get:
   summary: List all linked nodes
   description: >-
-    List of all nodes linked to the given registration.
+    List of all nodes linked to the registration.
 
     ####Returns
 
@@ -28,10 +28,10 @@ get:
 
   parameters:
     - in: path
-      name: node_id
+      name: registration_id
       type: string
       required: true
-      description: 'The unique identifier of the node.'
+      description: 'The unique identifier of the registration.'
 
   tags:
     - Registrations
