--- a/swagger-spec/registrations/list.yaml
+++ b/swagger-spec/registrations/list.yaml
@@ -1,7 +1,7 @@
 get:
   summary: List all registrations
   description: >-
-    A paginated list of registrations on the OSF for which the given user has access.
+    A paginated list of registrations on the OSF to which the user has access.
 
 
     The returned registrations are those which are public or which the user has access to view.
@@ -200,4 +200,3 @@ get:
             meta:
               total: 8559
               per_page: 10
-
