--- a/swagger-spec/registrations/providers_list.yaml
+++ b/swagger-spec/registrations/providers_list.yaml
@@ -1,9 +1,9 @@
-# /registrations/{node_id}/files
+# /registrations/{registration_id}/files
 
 get:
   summary: List all storage providers
   description: >-
-    List of all storage providers enabled on the given registration
+    A paginated list of storage providers enabled on the registration
 
 
     Users of the OSF may access their data on a [number of cloud-storage services](https://api.osf.io/v2/#storage-providers) that have integrations with the OSF.
@@ -30,10 +30,10 @@ get:
   parameters:
 
     - in: path
-      name: node_id
+      name: registration_id
       type: string
       required: true
-      description: 'The unique identifier of the node.'
+      description: 'The unique identifier of the registration.'
 
   tags:
     - Registrations
