Add languages changes, better examples

--- a/swagger-spec/users/addon_accounts_list.yaml
+++ b/swagger-spec/users/addon_accounts_list.yaml
@@ -9,7 +9,7 @@ get:
     #### Permissions
 
 
-    Addon accounts are visible only to the user that has ownership of them.
+    Addon accounts are visible only to the user that authorized the account.
 
 
     #### Returns
