--- a/swagger-spec/registrations/style_list.yaml
+++ b/swagger-spec/registrations/style_list.yaml
@@ -3,7 +3,7 @@ get:
   summary: List all citation styles
   description: >-
 
-    A paginated list of the registration's alternative styles
+    A paginated list of the registration's alternative citation styles
 
 
     #### Returns
