--- a/swagger-spec/registrations/wikis_list.yaml
+++ b/swagger-spec/registrations/wikis_list.yaml
@@ -11,9 +11,6 @@ get:
     to an individual wiki's detail view are not necessary.
 
 
-    Note that if an anonymous view_only key is being used, the user relationship will not be exposed.
-
-
     If the request is unsuccessful, a JSON object with an `errors` key containing
     information about the failure will be returned. Refer to the [list of error codes](#Introduction_error_codes)
     to understand why this request may have failed.
@@ -49,44 +46,44 @@ get:
       examples:
         application/json:
           data:
-            - relationships:
-                node:
-                  links:
-                    related:
-                      href: 'https://api.osf.io/v2/nodes/tvyxz/'
-                      meta: {}
-                user:
-                  links:
-                    related:
-                      href: 'https://api.osf.io/v2/users/5k3hq/'
-                      meta: {}
-                comments:
-                  links:
-                    related:
-                      href: 'https://api.osf.io/v2/nodes/tvyxz/comments/?filter%5Btarget%5D=zveyb'
-                      meta: {}
-              links:
-                info: 'https://api.osf.io/v2/wikis/zveyb/'
-                download: 'https://api.osf.io/v2/wikis/zveyb/content/'
-                self: 'https://api.osf.io/v2/wikis/zveyb/'
-              attributes:
-                kind: 'file'
-                name: 'home'
-                date_modified: '2017-02-16T15:45:57.671957'
-                extra:
-                  version: 47
-                content_type: 'text/markdown'
-                path: '/zveyb'
-                current_user_can_comment: true
-                materialized_path: '/zveyb'
-                size: 552
-              type: 'wikis'
-              id: 'xu77p'
+          - relationships:
+              node:
+                links:
+                  related:
+                    href: https://api.osf.io/v2/registrations/wu3a4/
+                    meta: {}
+              user:
+                links:
+                  related:
+                    href: https://api.osf.io/v2/users/edb8y/
+                    meta: {}
+              comments:
+                links:
+                  related:
+                    href: https://api.osf.io/v2/registrations/wu3a4/comments/?filter%5Btarget%5D=9rb7g
+                    meta: {}
+            links:
+              info: https://api.osf.io/v2/wikis/9rb7g/
+              download: https://api.osf.io/v2/wikis/9rb7g/content/
+              self: https://api.osf.io/v2/wikis/9rb7g/
+            attributes:
+              kind: file
+              name: home
+              date_modified: '2015-02-11T21:16:50.918000'
+              extra:
+                version: 1
+              content_type: text/markdown
+              path: "/9rb7g"
+              current_user_can_comment: false
+              materialized_path: "/9rb7g"
+              size: 1544
+            type: wikis
+            id: 9rb7g
           links:
-            first: ''
-            last: https://api.osf.io/v2/wikis/zveyb/?page=2
-            prev: ''
-            next: https://api.osf.io/v2/wikis/zveyb/?page=2
+            first:
+            last:
+            prev:
+            next:
             meta:
-              total: 12
+              total: 1
               per_page: 10
