--- a/swagger-spec/nodes/list.yaml
+++ b/swagger-spec/nodes/list.yaml
@@ -25,6 +25,8 @@ get:
     The `links` key contains a dictionary of links that can be used for [pagination](#Introduction_pagination).
 
 
+    This request should never return an error.
+    
     #### Filtering
 
     You can optionally request that the response only include nodes that match your filters by utilizing the `filter` query parameter, e.g.
