--- a/swagger-spec/nodes/addon_detail.yaml
+++ b/swagger-spec/nodes/addon_detail.yaml
@@ -6,7 +6,7 @@ get:
 
     #### Permissions
 
-    NodeSettings that are attached to public Nodes will give read-only access to everyone.
+    NodeSettings that are attached to public nodes will give read-only access to everyone.
     Private nodes require explicit read permission. Write and admin access are the same for public and private nodes.
     Administrators on a parent node have implicit read permissions for all child nodes.
 
@@ -32,7 +32,7 @@ get:
       type: string
       name: provider
       required: true
-      description: 'The unique identifier/name of the provider'
+      description: 'The unique identifier of the addon.'
   tags:
     - Nodes
   operationId: nodes_addon_read
@@ -41,7 +41,7 @@ get:
     '200':
       description: 'OK'
       schema:
-        $ref: '../addons/definition.yaml'
+        $ref: 'node_addon_definition.yaml'
       examples:
         application/json:
           data:
@@ -55,3 +55,72 @@ get:
               node_has_auth: false
             type: node_addons
             id: box
+
+patch:
+  summary: Update an addon
+  description: >-
+    Updates a node addon by setting the values of the attributes specified in the request body.
+    Any unspecified attributes will be left unchanged.
+
+
+    Node addon can be updated with either a **PUT** or **PATCH** request.
+    The `external_account_id`, `enabled`, and `folder_id` fields are mandatory in a **PUT**, and optional in **PATCH**.
+    Non-string values will be accepted and stringified, however we make no promises about the stringification output.
+
+
+    To delete or deauthorize a node addon, issue a **PUT** with all fields set to `null` or `False`, or a **PATCH** with enabled set `False`.
+
+    #### Permissions
+
+    NodeSettings that are attached to public nodes will give read-only access to everyone.
+    Private nodes require explicit read permission. Write and admin access are the same for public and private nodes.
+    Administrators on a parent node have implicit read permissions for all child nodes.
+
+    Any users with write or admin access to the node are able to deauthorize an enabled addon, but only the addon authorizer is able to change the configuration (i.e. selected folder) of an already-configured NodeSettings entity.
+
+
+    #### Returns
+
+    Returns a JSON object with a `data` key containing the new representation of the updated
+    node addon, if the request is successful.
+
+
+    If the request is unsuccessful, an `errors` key containing information about the failure will be returned.
+    Refer to the [list of error codes](#Introduction_error_codes) to understand why this request may have failed.
+
+  parameters:
+    - in: path
+      type: string
+      name: node_id
+      required: true
+      description: 'The unique identifier of the node.'
+    - in: path
+      type: string
+      name: provider
+      required: true
+      description: 'The unique identifier of the addon.'
+    - in: body
+      name: body
+      required: true
+      schema:
+        type: object
+        example:
+          data:
+            type: node_addons
+            id: "{provider}"
+            attributes:
+              external_account_id: "{account_id}"
+              folder_id: "{folder_id}"
+              folder_path: "{folder_path}"
+              url: "{url}"
+              label: "{label}"
+
+
+  tags:
+    - Nodes
+  operationId: nodes_node_addon_update
+  consumes:
+    - application/json
+  responses:
+    '200':
+      description: 'OK'
