--- a/swagger-spec/nodes/view_only_link_detail.yaml
+++ b/swagger-spec/nodes/view_only_link_detail.yaml
@@ -14,6 +14,10 @@ get:
     information about the failure will be returned. Refer to the [list of error codes](#Introduction_error_codes)
     to understand why this request may have failed.
 
+    ####Permissions
+
+
+    View only links on a node, public or private, are readable and writeable only by users that are administrators on the node.
   parameters:
 
     - in: path
