Update doc for OSF-7948 osf.io/pull/7410
subjects_acceptable deprecated from PreprintProviderSerializer as of v2.5

--- a/swagger-spec/introduction/versioning.yaml
+++ b/swagger-spec/introduction/versioning.yaml
@@ -89,6 +89,11 @@ get:
         + `banner_path`, `logo_path`, and `header_text`
         + `email_contact`
 
+    `v2.5`
+
+    + Deprecate the following field in the **Preprint Provider** serializer:
+        + `subjects_acceptable`
+
 
   operationId: versioning
   tags:
